# surrealdb-doc-crawler

./: .gitignore  README.md  compare.py  crawl.py  crawl2.py  crawl3.py  extract.js  extract_links.js  main.py  pyproject.toml
.playwright-cli/: page-2026-03-25T10-32-12-003Z.yml
AI_MEMORIES/: 2026-03-25_project_architecture.md  2026-03-25_todos.md
docs/: INDEX.md  manifest.json
docs/docs/: surrealql.md
docs/docs/surrealql/: clauses.md  comments.md  datamodel.md  demo.md  functions.md  operators.md  parameters.md  statements.md  transactions.md
docs/docs/surrealql/clauses/: explain.md  fetch.md  from.md  group-by.md  limit.md  omit.md  order-by.md  split.md  where.md  with.md
docs/docs/surrealql/datamodel/: arrays.md  booleans.md  bytes.md  casting.md  closures.md  datetimes.md  durations.md  files.md  formatters.md  futures.md  geometries.md  idioms.md  ids.md  literals.md  none-and-null.md  numbers.md  objects.md  ranges.md  records.md  references.md  regex.md  sets.md  strings.md  uuid.md  values.md
docs/docs/surrealql/functions/: database.md  ml.md  script.md
docs2/: INDEX.md  manifest.json
docs2/docs/: surrealql.md
docs2/docs/surrealql/: clauses.md  comments.md  datamodel.md  demo.md  functions.md  operators.md  parameters.md  statements.md  transactions.md
docs3/: INDEX.md  manifest.json
docs3/docs/: surrealql.md
docs3/docs/surrealql/: clauses.md  comments.md  datamodel.md  demo.md  functions.md  operators.md  parameters.md  statements.md  transactions.md
surreal_docs/: __init__.py  cli.py  core.py  extract.js
(+351 files in other folders)
