[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surreal-docs"
version = "1.0.0"
description = "SurrealDB docs crawler — crawl, snapshot, and diff SurrealQL documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["playwright>=1.58.0"]

[project.scripts]
surreal-docs = "surreal_docs.cli:main"
